@@ -6,6 +6,9 @@ Revision history for Perl module Math::Prime::Util
 
     - is_power(-1,k) now returns true for odd k.
 
+    - PP Bernoulli algorithm changed to Seidel from Brent-Harvey.  2x speedup.
+      Math::BigNum is 10x faster, and our GMP code is 2000x faster.
+
 
 0.60 2016-10-09
 
